css/styles.css
/* RESET */
h1,
h2,
h3,
h4,
h5,
h6,
p {
  margin: 0;
}
ul {
  list-style: none;
  margin: 0;
  padding-left: 0;
}
img {
  display: block;
} /* BASE */
body {
  font-family: "Roboto", sans-serif;
  color: #434455;
  background-color: #ffffff;
}
a {
  text-decoration: none;
}
/* LOGO */
.logo {
  font-family: "Raleway", sans-serif;
  font-weight: 700;
  font-size: 18px;
  line-height: 1.17;
  letter-spacing: 0.03em;
  text-transform: uppercase;
  color: #2e2f42;

  margin-right: 76px;
}
.logo-accent {
  color: #4d5ae5;
} /* HEADER */
.header {
  border-bottom: 1px solid #e7e9fc;
  box-shadow:
    0px 1px 6px rgba(46, 47, 66, 0.08),
    0px 1px 1px rgba(46, 47, 66, 0.16),
    0px 2px 1px rgba(46, 47, 66, 0.08);
}
.header-container {
  display: flex;
  align-items: center;
  justify-content: space-between;
}
.nav {
  display: flex;
  align-items: center;
}
.nav-list {
  display: flex;
  gap: 40px;
}
.nav-link {
  display: block;
  padding: 24px 0;
  font-weight: 500;
  font-size: 16px;
  line-height: 1.5;
  letter-spacing: 0.02em;
  color: #2e2f42;
}
.nav-link:hover,
.nav-link:focus {
  color: #404bbf;
}
.address {
  font-style: normal;
}
.address-list {
  display: flex;
  gap: 40px;
}
.address-link {
  display: block;
  padding: 24px 0;
  font-size: 16px;
  line-height: 1.5;
  letter-spacing: 0.02em;
  color: #434455;
  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
}
.address-link:hover,
.address-link:focus {
  color: #404bbf;
} /* HERO */
.hero-title {
  font-size: 56px;
  line-height: 1.07;
  font-weight: 700;
  letter-spacing: 0.02em;
  text-align: center;
  color: #ffffff;
  max-width: 496px;
  margin: 0 auto 48px;
}
.hero-button {
  font-family: inherit;
  font-weight: 500;
  font-size: 16px;
  line-height: 1.5;
  letter-spacing: 0.04em;
  color: #ffffff;
  background-color: #4d5ae5;
  border: none;
  cursor: pointer;
  display: block;
  margin: 0 auto;
  padding: 16px 32px;
  border-radius: 4px;
  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
}
.hero-button:hover,
.hero-button:focus {
  background-color: #404bbf;
}
/* SECTION */
.section {
  padding: 120px 0;
}
/* CONTAINER */
.container {
  max-width: 1158px;
  padding: 0 15px;
  margin: 0 auto;
}
/* FEATURES */
.features-title {
  margin-bottom: 72px;
  font-size: 36px;
  line-height: 1.11;
  font-weight: 700;
  text-align: center;
  color: #2e2f42;
}
.features-list {
  display: flex;
  gap: 24px;
}
.features-item {
  width: calc((100% - 72px) / 4);
}
.features-subtitle {
  margin-bottom: 8px;
  font-size: 20px;
  font-weight: 500;
  color: #2e2f42;
}
.features-text {
  font-size: 16px;
  line-height: 1.5;
} /* TEAM */
.team {
  background-color: #f4f4fd;
}
.team-title {
  margin-bottom: 72px;
  font-size: 36px;
  text-align: center;
  color: #2e2f42;
}
.team-list {
  display: flex;
  gap: 24px;
}
.team-item {
  background-color: #ffffff;
  width: calc((100% - 72px) / 4);
  text-align: center;
  border-radius: 0 0 4px 4px;
  box-shadow:
    0px 1px 6px rgba(46, 47, 66, 0.08),
    0px 1px 1px rgba(46, 47, 66, 0.16),
    0px 2px 1px rgba(46, 47, 66, 0.08);
}
.team-text {
  padding: 32px 16px;
}
.team-name {
  margin-bottom: 8px;
  font-size: 20px;
  font-weight: 500;
  color: #2e2f42;
}
.team-position {
  font-size: 16px;
  line-height: 1.5;
} /* PORTFOLIO */
.portfolio-title {
  margin-bottom: 72px;
  font-size: 36px;
  text-align: center;
  color: #2e2f42;
}
.portfolio-list {
  display: flex;
  flex-wrap: wrap;
  gap: 48px 24px;
}
.portfolio-name {
  margin-bottom: 8px;
  font-size: 20px;
  font-weight: 500;
  color: #2e2f42;
}
.portfolio-text {
  font-size: 16px;
  line-height: 1.5;
} /* FOOTER */
.footer {
  background-color: #2e2f42;
  padding: 100px 0;
}
.footer-logo {
  color: #f4f4fd;
  display: inline-block;
  margin-bottom: 16px;
}
.footer-text {
  max-width: 264px;
  color: #f4f4fd;
  font-size: 16px;
  line-height: 1.5;
}
.visually-hidden {
  position: absolute;
  width: 1px;
  height: 1px;
  margin: -1px;
  border: 0;
  padding: 0;
  white-space: nowrap;
  clip-path: inset(100%);
  clip: rect(0 0 0 0);
  overflow: hidden;
}
.portfolio-content {
  padding: 32px 16px;
  border: 1px solid #e7e9fc;
  border-top: none;
}
/* ACTIVE LINK */
.nav-link {
  position: relative;
  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
}

.current {
  color: #404bbf;
}

.current::after {
  content: "";
  position: absolute;
  left: 0;
  bottom: -1px;
  width: 100%;
  height: 4px;
  border-radius: 2px;
  background-color: #404bbf;
}
/* SOCIAL ICONS */
.social-list {
  display: flex;
  justify-content: center;
  gap: 24px;
  margin-top: 8px;
}

.social-item {
  width: 40px;
  height: 40px;
}

.social-link {
  width: 100%;
  height: 100%;
  background-color: #4d5ae5;
  border-radius: 50%;
  display: flex;
  align-items: center;
  justify-content: center;
  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
}

.social-link:hover,
.social-link:focus {
  background-color: #404bbf;
}

.social-icon {
  fill: #f4f4fd;
}

/* PORTFOLIO HOVER */
.portfolio-item {
  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
  width: calc((100% - 48px) / 3);
}

.portfolio-item:hover {
  box-shadow:
    0px 1px 6px rgba(46, 47, 66, 0.08),
    0px 1px 1px rgba(46, 47, 66, 0.16),
    0px 2px 1px rgba(46, 47, 66, 0.08);
}

.hero {
  max-width: 1440px;
  margin: 0 auto;
  background-image:
    linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
    url("../images/hero-bg.jpg");
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
  background-color: #2e2f42;
  padding: 188px 0;
}

.features-icon-box {
  height: 112px;
  border: 1px solid #8e8f99;
  border-radius: 4px;
  background-color: #f4f4fd;
  display: flex;
  justify-content: center;
  align-items: center;
  margin-bottom: 8px;
}
.portfolio-image-wrapper {
  position: relative;
  overflow: hidden;
}

.portfolio-overlay {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  padding: 40px 32px;
  background-color: #4d5ae5;
  color: #f4f4fd;
  line-height: 1.5;
  transform: translateY(100%);
  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
  letter-spacing: 0.02em;
  font-size: 16px;
  font-weight: 400;
}
.portfolio-item:hover .portfolio-overlay {
  transform: translateY(0);
}
.footer-container {
  display: flex;
  align-items: baseline;
}

.footer-left {
  margin-right: 120px;
}

.footer-social-title {
  font-weight: 500;
  font-size: 16px;
  line-height: 1.5;
  letter-spacing: 0.02em;
  color: #ffffff;
  margin-bottom: 16px;
}

.footer-social-list .social-link:hover,
.footer-social-list .social-link:focus {
  background-color: #31d0aa;
}

.footer-social-list {
  justify-content: flex-start;
  gap: 16px;
  margin-top: 0;
}

